@@ -1,7 +1,7 @@
 package com.ryu.minecraft.mod.neoforge.neostorage.enums;
 
 public enum StorageType {
-    ONE_ITEM(1), TWO_ITEMS(2);
+    ONE_ITEM(1), TWO_ITEMS(2), THREE_ITEMS(3);
     
     private final int value;
     
