@@ -1,0 +1,19 @@
+{
+  "variants": {
+    "facing=north": {
+      "model": "neostorage:block/toolstorage3"
+    },
+    "facing=east": {
+      "model": "neostorage:block/toolstorage3",
+      "y": 90
+    },
+    "facing=south": {
+      "model": "neostorage:block/toolstorage3",
+      "y": 180
+    },
+    "facing=west": {
+      "model": "neostorage:block/toolstorage3",
+      "y": 270
+    }
+  }
+}
