@@ -1,6 +1,7 @@
 {
   "block.neostorage.toolstorage1": "Tool Storage (1x1)",
   "block.neostorage.toolstorage2": "Tool Storage (1x2)",
+  "block.neostorage.toolstorage3": "Tool Storage (1+2)",
   
   "item.neostorage.neotool": "NeoTool item",
   
