@@ -1,5 +1,6 @@
 0.0.2-1.20.6
  - Adding Tool Storage with 2 slots.
+ - Adding Tool Storage with 3 slots.
 0.0.1-1.20.6
  - First commit.
  - Adding core item to build the storage block.
